--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,13 @@
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a href="./" class="nav__link link">Студия</a>
+              <a href="./" class="nav__link link">Студія</a>
             </li>
             <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link nav__link--current link">Портфолио</a>
+              <a href="./portfolio.html" class="nav__link nav__link--current link">Портфоліо</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link link">Контакты</a>
+              <a href="" class="nav__link link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -63,17 +63,17 @@
     </header>
     <main>
       <section class="section portfolio">
-        <div class="container portfolio">
+        <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-filter-button list">
             <li class="filter-item">
               <button type="button" class="filter-button current">Все</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">Веб-сайты</button>
+              <button type="button" class="filter-button">Веб-сайти</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">Приложения</button>
+              <button type="button" class="filter-button">Додатки</button>
             </li>
             <li class="filter-item">
               <button type="button" class="filter-button">Дизайн</button>
@@ -93,9 +93,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -114,9 +114,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -135,14 +135,14 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-item-title">Ресторан Seafood</h2>
-                  <p class="portfolio-item-group">Приложение</p>
+                  <p class="portfolio-item-group">Додаток</p>
                 </div>
               </a>
             </li>
@@ -156,9 +156,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -177,14 +177,14 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-item-title">Проект Boxes</h2>
-                  <p class="portfolio-item-group">Приложение</p>
+                  <p class="portfolio-item-group">Додаток</p>
                 </div>
               </a>
             </li>
@@ -198,9 +198,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -219,9 +219,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -240,9 +240,9 @@
                     height="294"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
@@ -260,14 +260,14 @@
                     width="370"
                   />
                   <p class="portfolio-item-link-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-item-title">Growing Business</h2>
-                  <p class="portfolio-item-group">Приложение</p>
+                  <p class="portfolio-item-group">Додаток</p>
                 </div>
               </a>
             </li>
@@ -278,59 +278,61 @@
     <footer>
       <div class="container">
         <div class="footer">
-          <div class="footer-left">
-            <a href="./" class="logo logo__white link"
-              ><span class="logo-prefix">Web</span>Studio</a
-            >
-            <address class="footer-addr">
-              <ul class="footer-contacts list">
-                <li class="footer-contacts-item adress">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-contacts-item">
-                  <a href="mailto:info@example.com" class="footer-contacts link"
-                    >info@example.com</a
-                  >
+          <div class="footer-main">
+            <div class="footer-left">
+              <a href="./" class="logo logo__white link"
+                ><span class="logo-prefix">Web</span>Studio</a
+              >
+              <address class="footer-addr">
+                <ul class="footer-contacts list">
+                  <li class="footer-contacts-item adress">м. Київ, пр-т Лесі Українки, 26</li>
+                  <li class="footer-contacts-item">
+                    <a href="mailto:info@example.com" class="footer-contacts link"
+                      >info@example.com</a
+                    >
+                  </li>
+                  <li class="footer-contacts-item">
+                    <a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="footer-socials">
+              <h2 class="footer-socials-header">приєднуйтесь</h2>
+              <ul class="footer-soc-set card-set list">
+                <li class="card-set__item">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icon">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-contacts-item">
-                  <a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
+                <li class="card-set__item">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icon">
+                      <use href="./images/icons.svg#icon-twttr"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-set__item">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icon">
+                      <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-set__item">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
-          </div>
-          <div class="footer-socials">
-            <h2 class="footer-socials-header">присоединяйтесь</h2>
-            <ul class="footer-soc-set card-set list">
-              <li class="card-set__item">
-                <a href="#" class="footer-soc-link">
-                  <svg class="footer-soc-icon">
-                    <use href="./images/icons.svg#icon-insta"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="card-set__item">
-                <a href="#" class="footer-soc-link">
-                  <svg class="footer-soc-icon">
-                    <use href="./images/icons.svg#icon-twttr"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="card-set__item">
-                <a href="#" class="footer-soc-link">
-                  <svg class="footer-soc-icon">
-                    <use href="./images/icons.svg#icon-fb"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="card-set__item">
-                <a href="#" class="footer-soc-link">
-                  <svg class="footer-soc-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            </div>
           </div>
           <div class="footer-email-input">
-            <h2 class="footer-socials-header">Подпишитесь на рассылку</h2>
+            <h2 class="footer-socials-header">Підпишіться на розсилку</h2>
             <form class="footer-form" action="footer-form">
               <input
                 class="footer-email-input-field"
@@ -340,7 +342,7 @@
               />
               <div class="footer-form-btn">
                 <button type="submit" class="footer-sign-btn">
-                  Подписаться
+                  Підписатися
                   <svg width="24" height="24" class="footer-btn-icon-send">
                     <use href="./images/icons.svg#icon-send"></use>
                   </svg>
@@ -351,5 +353,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
