--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a href="./" class="nav__link nav__link--current link">Студия</a>
+              <a href="./" class="nav__link nav__link--current link">Студія</a>
             </li>
             <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link link">Портфолио</a>
+              <a href="./portfolio.html" class="nav__link link">Портфоліо</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link link">Контакты</a>
+              <a href="#" class="nav__link link">Контакти</a>
             </li>
           </ul>
         </nav>
