--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           ><span class="logo-prefix">Web</span>Studio</a
         >
         <button type="button" class="menu-button" data-menu-button>
-          <svg width="40" height="40" aria-label="Mobile menu switcher">
+          <svg class="svg" width="40" height="40" aria-label="Mobile menu switcher">
             <use class="icon-close" href="./images/icons.svg#close-40px"></use>
             <use class="icon-menu" href="./images/icons.svg#menu-40px"></use>
           </svg>
@@ -185,29 +185,29 @@
               <div class="our-team-wrapper">
                 <h3 class="our-team-name">Игорь Демьяненко</h3>
                 <p class="our-team-position">Product Designer</p>
-                <ul class="our-team-soc card-set list">
-                  <li class="our-team-soc-item card-set__item">
+                <ul class="our-team-soc list">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-twttr"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-fb"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -230,29 +230,29 @@
               <div class="our-team-wrapper">
                 <h3 class="our-team-name">Ольга Репина</h3>
                 <p class="our-team-position">Frontend Developer</p>
-                <ul class="our-team-soc card-set list">
-                  <li class="our-team-soc-item card-set__item">
+                <ul class="our-team-soc list">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-twttr"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-fb"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -275,29 +275,29 @@
               <div class="our-team-wrapper">
                 <h3 class="our-team-name">Николай Тарасов</h3>
                 <p class="our-team-position">Marketing</p>
-                <ul class="our-team-soc card-set list">
-                  <li class="our-team-soc-item card-set__item">
+                <ul class="our-team-soc list">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-twttr"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-fb"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -320,29 +320,29 @@
               <div class="our-team-wrapper">
                 <h3 class="our-team-name">Михаил Ермаков</h3>
                 <p class="our-team-position">UI Designer</p>
-                <ul class="our-team-soc card-set list">
-                  <li class="our-team-soc-item card-set__item">
+                <ul class="our-team-soc list">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-twttr"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-fb"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-soc-item card-set__item">
+                  <li class="our-team-soc-item">
                     <a href="#" class="our-team-soc-link">
                       <svg class="our-team-soc-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
