--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           ><span class="logo-prefix">Web</span>Studio</a
         >
         <button type="button" class="menu-button" data-menu-button>
-          <svg width="40" height="40" aria-label="Mobile menu switcher">
+          <svg class="svg" width="40" height="40" aria-label="Mobile menu switcher">
             <use class="icon-close" href="./images/icons.svg#close-40px"></use>
             <use class="icon-menu" href="./images/icons.svg#menu-40px"></use>
           </svg>
@@ -399,10 +399,14 @@
     <div class="mobile-menu" data-menu>
       <ul class="mobile-menu__nav list">
         <li class="mobile-menu__nav-item">
-          <a class="mobile-menu__nav-link mobile-menu__nav-link--current link" href="./">Студія</a>
+          <a class="mobile-menu__nav-link link" href="./">Студія</a>
         </li>
         <li class="mobile-menu__nav-item">
-          <a class="mobile-menu__nav-link link" href="./portfolio.html">Портфоліо</a>
+          <a
+            class="mobile-menu__nav-link mobile-menu__contacts-link--current link"
+            href="./portfolio.html"
+            >Портфоліо</a
+          >
         </li>
         <li class="mobile-menu__nav-item">
           <a class="mobile-menu__nav-link link" href="#">Контакти</a>
