--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         </form>
       </div>
     </div>
-    <!-- mobil menu -->
+    <!-- mobile menu -->
     <div class="mobile-menu" data-menu>
       <ul class="mobile-menu__nav list">
         <li class="mobile-menu__nav-item">
